# bashskel

./: ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
etc/: Makefile.am
etc/conf.d/: Makefile.am
src/: Makefile.am  bsk.c  libbsk-debug.c  libbsk-env.c  libbsk-log.c  libbsk.c
